--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
+@import '~ngx-toastr/toastr';
 /* You can add global styles to this file, and also import other style files */
+html, body { height: 100%; width: 100%; overflow-x: hidden; margin:0 }
+html, body { height: 100%; }
+#toast-container > div {
+    opacity:1;
+}
