--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -38,6 +38,7 @@
     <div class="popup" [hidden]="hidePopup">
       <div class="window">
         <h1 class="title">{{ gameState }}</h1>
+        <h1>{{wordLost}}</h1>
         <button (click)="newGame()">New Game</button>
       </div>
     </div>
