--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -75,7 +75,7 @@
   }
   
   .blue {
-    background-color: skyblue;
+    background-color: blue;
   }
   
   .orange {
@@ -134,16 +134,20 @@
     width: 22rem;
     height: 15rem;
     text-align: center;
-    border: 0.25rem solid darkgray;
+    border-radius: 5px;
   }
   .window button {
-    background-color: black;
     text-transform: capitalize;
-  
+    padding:5px; 
+    border-radius: 5px; 
+    cursor: pointer;
+    background-color: blue;
     color: white;
     font-weight: bold;
-    padding: 0.5rem;
+    padding: 1rem;
     margin: 0 1rem;
+    border-color: blue;
+    font-family: poppins;
   }
   footer{
       font-family: poppins-bold;
