--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div id="app">
     <div class="screen" *ngIf="showScare"></div>
-    <h1 class="title" style="font-family: pm;">
+    <h1 class="title" style="font-family: pm;" *ngIf="showScare">
       <span style="font-family: pm;">Scardle</span>
     </h1>
     <h4 class="title">
