--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -21,6 +21,13 @@ h4 {
   width: 100vw;
   background-color: black;
 }
+.sharebutton{
+  width: 100%;
+  margin-top: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .keyboard {
   display: block;
   padding-top: 4rem;
