--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,13 +33,9 @@
       <button (click)="newGame()">New Game</button>
     </div>
   </div>
-  <h3 class="title" *ngIf="!showShareBtn">
-    <a
-      style="padding:3px; border-radius: 5px; cursor: pointer; color: white; background-color: blue;"
-      (click)="share()"
-      >SHARE</a
-    >
-  </h3>
+  <div class="sharebutton">
+    <a class="button-6" (click)="share()">SHARE</a>
+  </div>
   <div class="endGame" *ngIf="showShareBtn">
     <h3 class="title">
       <a
@@ -51,6 +47,6 @@
     </h3>
   </div>
   <footer *ngIf="!showShareBtn">
-    <small>Created by: <a style="color: blue">IrelandWebDesigns</a></small>
+    <small>Created by: <a style="color: blue" href = "https://irelandwebdesigns.ie">IrelandWebDesigns</a></small>
   </footer>
 </div>
